--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-xl-5 col-md-7 top-social-agile text-md-right text-center pr-sm-0 mt-md-0 mt-2">
 						<div class="row middle-flex">
 							<div class="col-lg-5 col-4 top-w3layouts p-md-0 text-right">
-								<!-- login -->
+								<!-- login 
 								<a href="login.html" class="btn login-button-2 text-uppercase text-wh">
 									<span class="fa fa-sign-in mr-2"></span>Login</a>
 								<!-- //login -->
