added new meta keywords

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
 	<meta name="keywords"
-		content="IFT1142 - TP1 de Marjolaine Hébert" />
+		content="IFT1142 - TP1 de Marjolaine Hébert, mon premier travail dans le cours ift1142" />
 	<script>
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -96,7 +96,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<li class="google-w3">
 										<a href="#google">
 											<span class="fa fa-google-plus"></span>
-										</a>
+						 				</a>
 									</li>
 									<li class="dribble-w3">
 										<a href="#dribble">
