--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="fr">
 
 <head>
 	<title>IFT1142 - TP1 de Marjolaine Hébert</title>
@@ -58,12 +58,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="row">
 							<div class="col-xl-3 col-6 header-top_w3layouts">
 								<p class="text-da">
-									<span class="fa fa-map-marker mr-2"></span>Parma Via, Italy
+									<span class="fa fa-map-marker mr-2"></span>Montréal, Canada
 								</p>
 							</div>
 							<div class="col-xl-3 col-6 header-top_w3layouts">
 								<p class="text-da">
-									<span class="fa fa-phone mr-2"></span>+1 000263676
+									<span class="fa fa-phone mr-2"></span>+1 RES-TAU-RANT
 								</p>
 							</div>
 							<div class="col-xl-6"></div>
@@ -71,41 +71,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-xl-5 col-md-7 top-social-agile text-md-right text-center pr-sm-0 mt-md-0 mt-2">
 						<div class="row middle-flex">
-							<div class="col-lg-5 col-4 top-w3layouts p-md-0 text-right">
-								<!-- login 
-								<a href="login.html" class="btn login-button-2 text-uppercase text-wh">
-									<span class="fa fa-sign-in mr-2"></span>Login</a>
-								<!-- //login -->
+							<div class="col-lg-12 col-8 ">
+								<div class="row">
+									<div class="col-xl-3 col-6 header-top_w3layouts">
+										<p class="text-da">
+											<span class="fa fa-map-marker mr-2"></span>Montréal, Canada
+										</p>
+									</div>
+									<div class="col-xl-3 col-6 header-top_w3layouts">
+										<p class="text-da">
+											<span class="fa fa-phone mr-2"></span>+1 RES-TAU-RANT
+										</p>
+									</div>
+									<div class="col-xl-6"></div>
+								</div>
 							</div>
-							<div class="col-lg-7 col-8 social-grid-w3">
-								<!-- social icons -->
-								<ul class="top-right-info">
-									<li>
-										<p>Follow Us:</p>
-									</li>
-									<li class="facebook-w3">
-										<a href="#facebook">
-											<span class="fa fa-facebook-f"></span>
-										</a>
-									</li>
-									<li class="twitter-w3">
-										<a href="#twitter">
-											<span class="fa fa-twitter"></span>
-										</a>
-									</li>
-									<li class="google-w3">
-										<a href="#google">
-											<span class="fa fa-google-plus"></span>
-						 				</a>
-									</li>
-									<li class="dribble-w3">
-										<a href="#dribble">
-											<span class="fa fa-dribbble"></span>
-										</a>
-									</li>
-								</ul>
-								<!-- //social icons -->
-							</div>
+							
 						</div>
 					</div>
 				</div>
@@ -126,6 +107,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</a>
 				</h1>
 				<!-- //logo -->
+				
 				<!-- nav -->
 				<div class="nav_web-dealingsls">
 					<nav>
