adding nav item

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</li>
 							<li><a href="menu.html">Menu</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="contact.html">ALLOOOOOOOOO</a></li>
 							<li>
 								<!-- login -->
 								<a href="https://w3layouts.com/" target="_blank" class="dwn-button ml-lg-5">
