added a nav item too

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</li>
 							<li><a href="menu.html">Menu</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="contact.html">ALLOOOOOOOOO</a></li>
+							<li><a href="contact.html">ALLOOOOOOOOO</a></li>
+							<li><a href="contact.html">ALLOOOOOOOOO</a></li>
 							<li>
 								<!-- login -->
 								<a href="https://w3layouts.com/" target="_blank" class="dwn-button ml-lg-5">
@@ -159,7 +160,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-left-w3">
 					<div class="container">
 						<div class="banner-info_agile_w3ls">
-							<h5>Only Fresh Burgers Allo</h5>
+							<h5>Only Fresh Burgers</h5>
 							<h3 class="text-da mb-4">Flame <span>Grilled Burger</span> </h3>
 							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 								laudantium</p>
