--- a/index.html
+++ b/index.html
@@ -54,36 +54,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="top-bar py-2 border-bottom">
 			<div class="container">
 				<div class="row middle-flex">
-					<div class="col-xl-7 col-md-5 top-social-agile mb-md-0 mb-1 text-lg-left text-center">
+					<div class="col-md-4 top-social-agile mb-md-0 mb-1 text-lg-left text-center">
 						<div class="row">
-							<div class="col-xl-3 col-6 header-top_w3layouts">
-								<p class="text-da">
-									<span class="fa fa-map-marker mr-2"></span>Montréal, Canada
-								</p>
-							</div>
-							<div class="col-xl-3 col-6 header-top_w3layouts">
-								<p class="text-da">
-									<span class="fa fa-phone mr-2"></span>+1 RES-TAU-RANT
-								</p>
-							</div>
-							<div class="col-xl-6"></div>
+							<h1 class="logo-tasty">
+								<a id="logo" class="logo" href="index.html">
+									<span>Tasty Stuff</span> &amp; Burgers <img src="images/logo.png" alt="" class="img-fluid">
+								</a>
+							</h1>
 						</div>
 					</div>
-					<div class="col-xl-5 col-md-7 top-social-agile text-md-right text-center pr-sm-0 mt-md-0 mt-2">
+					<div class="col-md-8 top-social-agile text-md-right text-center pr-sm-0 mt-md-0 mt-2">
 						<div class="row middle-flex">
-							<div class="col-lg-12 col-8 ">
+							<div class="col-lg-12 col-12">
 								<div class="row">
-									<div class="col-xl-3 col-6 header-top_w3layouts">
-										<p class="text-da">
-											<span class="fa fa-map-marker mr-2"></span>Montréal, Canada
-										</p>
-									</div>
-									<div class="col-xl-3 col-6 header-top_w3layouts">
-										<p class="text-da">
+									<div class="col-md-12 col-12">
+										<p class="text-da small">
 											<span class="fa fa-phone mr-2"></span>+1 RES-TAU-RANT
 										</p>
+										<p class="text-da small">
+											<span class="fa fa-map-marker mr-2"></span>Montréal, Canada
+										</p>
+										<p class="text-da small">
+											<span class="fa fa-id-card-o mr-2"></span>Travail pr&eacute;sent&eacute; par Marjolaine H&eacute;bert
+										</p>
 									</div>
-									<div class="col-xl-6"></div>
+									<div class="col-md-12 col-12">
+										<div class="nav-content">
+											<!-- nav -->
+											<div class="nav_web-dealingsls">
+												<nav>
+													<label for="drop" class="toggle">Menu</label>
+													<input type="checkbox" id="drop" />
+													<ul class="menu">
+														<li><a href="index.html">Accueil</a></li>
+														<li><a href="index.html#carte">&Agrave; la carte</a></li>
+													</ul>
+												</nav>
+											</div>
+											<!-- //nav -->
+										</div>
+									</div>
 								</div>
 							</div>
 							
@@ -99,55 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- navigation -->
 	<div class="main-top py-1">
 		<div class="container">
-			<div class="nav-content">
-				<!-- logo -->
-				<h1>
-					<a id="logo" class="logo" href="index.html">
-						<img src="images/logo.png" alt="" class="img-fluid"><span>Tasty</span> Burger
-					</a>
-				</h1>
-				<!-- //logo -->
-				
-				<!-- nav -->
-				<div class="nav_web-dealingsls">
-					<nav>
-						<label for="drop" class="toggle">Menu</label>
-						<input type="checkbox" id="drop" />
-						<ul class="menu">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About Us</a></li>
-							<li>
-								<!-- First Tier Drop Down -->
-								<label for="drop-3" class="toggle toogle-2">Pages <span class="fa fa-angle-down"
-										aria-hidden="true"></span>
-								</label>
-								<a href="#pages">Pages <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-								<input type="checkbox" id="drop-3" />
-								<ul>
-									<li><a class="drop-text" href="#services">Services</a></li>
-									<li><a class="drop-text" href="about.html">Our Chefs</a></li>
-									<li><a class="drop-text" href="#blog">Blog</a></li>
-									<li><a class="drop-text" href="single.html">Single Page</a></li>
-									<li><a class="drop-text" href="login.html">Login</a></li>
-									<li><a class="drop-text" href="register.html">Register</a></li>
-								</ul>
-							</li>
-							<li><a href="menu.html">Menu</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-							<li><a href="contact.html">ALLOOOOOOOOO</a></li>
-							<li><a href="contact.html">ALLOOOOOOOOO</a></li>
-							<li>
-								<!-- login -->
-								<a href="https://w3layouts.com/" target="_blank" class="dwn-button ml-lg-5">
-									<span class="fa fa-cloud-download mt-lg-0 mt-4" aria-hidden="true"></span>
-								</a>
-								<!-- //login -->
-							</li>
-						</ul>
-					</nav>
-				</div>
-				<!-- //nav -->
-			</div>
+			
 		</div>
 	</div>
 	<!-- //navigation -->
@@ -406,117 +368,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</section>
 	<!-- //services -->
 
-	<!-- blog -->
-	<section class="blog_w3ls py-5" id="blog">
-		<div class="container py-xl-5 py-lg-3">
-			<div class="title-section text-center mb-md-5 mb-4">
-				<p class="w3ls-title-sub">Posts</p>
-				<h3 class="w3ls-title mb-3">Our Latest <span>Blog</span></h3>
-				<p class="titile-para-text mx-auto">Inventore veritatis et quasi architecto beatae vitae dicta sunt
-					explicabo.Nemo
-					enim totam rem aperiam.</p>
-			</div>
-			<div class="row">
-				<!-- blog grid -->
-				<div class="col-lg-4 col-md-6">
-					<div class="card border-0">
-						<div class="card-header p-0">
-							<a href="single.html">
-								<img src="images/blog1.png" class="card-img-bottom img-fluid" alt="image">
-							</a>
-							<img src="images/te1.jpg" alt="" class="img-blog rounded-circle img-fluid">
-						</div>
-						<div class="card-body text-center pt-5 mt-2">
-							<h5 class="blog-title card-title mb-2"><a href="single.html">Sed ut Riciatis</a></h5>
-							<div class="blog_w3icon border-top border-bottom py-1 mb-3">
-								<span>
-									Magna Kictum - Nov 12</span>
-							</div>
-							<p>Cras ultricies ligula sed magna dictum porta auris blandita.</p>
-							<a href="single.html" class="button-w3ls mt-4">Read More
-								<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- //blog grid -->
-				<!-- blog grid -->
-				<div class="col-lg-4 col-md-6">
-					<div class="card border-0">
-						<div class="card-header p-0">
-							<a href="single.html">
-								<img src="images/blog2.png" class="card-img-bottom img-fluid" alt="image">
-							</a>
-							<img src="images/te2.jpg" alt="" class="img-blog rounded-circle img-fluid">
-						</div>
-						<div class="card-body text-center pt-5 mt-2">
-							<h5 class="blog-title card-title mb-2"><a href="single.html">Unde omnis iste</a></h5>
-							<div class="blog_w3icon border-top border-bottom py-1 mb-3">
-								<span>
-									Auris Jlan - Nov 15</span>
-							</div>
-							<p>Cras ultricies ligula sed magna dictum porta auris blandita.</p>
-							<a href="single.html" class="button-w3ls active mt-4">Read More
-								<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- //blog grid -->
-				<!-- blog grid -->
-				<div class="col-lg-4 col-md-6 mt-lg-0 mt-4">
-					<div class="card border-0">
-						<div class="card-header p-0">
-							<a href="single.html">
-								<img src="images/blog3.png" class="card-img-bottom img-fluid" alt="image">
-							</a>
-							<img src="images/te3.jpg" alt="" class="img-blog rounded-circle img-fluid">
-						</div>
-						<div class="card-body text-center pt-5 mt-2">
-							<h5 class="blog-title card-title mb-2"><a href="single.html">Natus error sit</a></h5>
-							<div class="blog_w3icon border-top border-bottom py-1 mb-3">
-								<span>
-									Dictum Orta - Nov 20</span>
-							</div>
-							<p>Cras ultricies ligula sed magna dictum porta auris blandita.</p>
-							<a href="single.html" class="button-w3ls mt-4">Read More
-								<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- //blog grid -->
-			</div>
-		</div>
-	</section>
-	<!-- //blog -->
+	
 
 	<!-- slides images -->
-	<section class="wthree-slider" id="masthead">
-
-	</section>
+	<section class="wthree-slider" id="masthead"></section>
 	<!-- //slides images -->
-
-	<!-- newsletter -->
-	<section class="subscribe-main py-5">
-		<div class="container py-xl-5 py-3">
-			<div class="row pb-lg-4 pt-lg-5">
-				<div class="col-lg-6 col-md-9 text-center">
-					<h3 class="w3ls-title mb-2">Subscribe to Newsletter</h3>
-					<p class="mb-xl-5 mb-4">Free Delivery on your first order!</p>
-					<form action="#" method="post" class="d-flex newsletter-info">
-						<input type="email" name="email" placeholder="Enter your Email..." required="">
-						<button type="submit">Submit</button>
-					</form>
-				</div>
-				<div class="col-lg-6 col-md-3">
-
-				</div>
-			</div>
-			<img src="images/sub.png" alt="" class="img-fluid sub-img">
-		</div>
-	</section>
-	<!-- //newsletter -->
 
 	<!-- footer -->
 	<footer class="py-5">
@@ -524,22 +380,45 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="row footer-top">
 				<div class="col-lg-4 footer-grid_section_1its footer-text">
 					<!-- logo -->
-					<h2>
+					<h2 class="logo-tasty">
 						<a class="logo text-wh" href="index.html">
-							<img src="images/logo.png" alt="" class="img-fluid"><span>Tasty</span> Burger
+							<span>Tasty Stuff</span> &amp; Burgers <img src="images/logo.png" alt="" class="img-fluid">
 						</a>
 					</h2>
 					<!-- //logo -->
-					<p class="mt-lg-4 mt-3 mb-lg-5 mb-4">Sed ut perspiciatis unde omnis iste natus errorhjhsit lupt
-						atem
-						accursit lupt atem accu
-						dfdsa
-						ntium doloremque laudan tium accu santium dolore.</p>
+					<p class="mb-3">
+						Sandwich constitué de deux tranches de pain rondes et d'une galette de viande hachée garnie de condiments et, 
+						selon le cas, de légumes ou de fromage. 
+					</p>
+					<h5>
+						Nous faisons les meilleurs!
+					</h5>
+				</div>
+				<div class="col-lg-4 footer-grid_section_1its my-lg-0 my-sm-4 my-4">
+					<div class="footer-title">
+						<h3>Nous joindre</h3>
+					</div>
+					<div class="footer-text mt-4">
+						<p><span class="fa fa-map-marker mr-2"></span>1234 Rue Gourmande, Montréal</p>
+						<p class="my-2"><span class="fa fa-phone mr-2"></span>+1 RES-TAU-RANT</p>
+						<p><span class="fa fa-envelope-o mr-2"></span>Email : <a href="marjolaine.hebert@umontreal.ca">marjolaine.hebert@umontreal.ca</a></p>
+					</div>
+				</div>
+				<div class="col-lg-4 footer-grid_section_1its my-lg-0 my-sm-4 my-4">
+					<div class="footer-title">
+						<h3>Mode de paiement accept&eacute;</h3>
+					</div>
+					<ul class="list-unstyled payment-links mt-4">
+						<li><a href="#"><img src="images/pay2.png" alt=""></a></li>
+						<li><a href="#"><img src="images/pay5.png" alt=""></a></li>
+						<li><a href="#"><img src="images/pay1.png" alt=""></a></li>
+						<li><a href="#"><img src="images/pay4.png" alt=""></a></li>
+					</ul>
 					<!-- social icons -->
-					<ul class="top-right-info">
-						<li>
-							<p>Follow As:</p>
-						</li>
+					<div class="footer-title mt-4">
+						<h3>Nous joindre</h3>
+					</div>
+					<ul class="top-right-info mt-4">
 						<li class="facebook-w3">
 							<a href="#facebbok">
 								<span class="fa fa-facebook-f"></span>
@@ -550,71 +429,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<span class="fa fa-twitter"></span>
 							</a>
 						</li>
-						<li class="google-w3">
-							<a href="#google">
-								<span class="fa fa-google-plus"></span>
-							</a>
-						</li>
-						<li class="dribble-w3">
-							<a href="#dribble">
-								<span class="fa fa-dribbble"></span>
-							</a>
-						</li>
 					</ul>
 					<!-- //social icons -->
-				</div>
-				<div class="col-lg-4 footer-grid_section_1its my-lg-0 my-sm-4 my-4">
-					<div class="footer-title">
-						<h3>Contact Us</h3>
-					</div>
-					<div class="footer-text mt-4">
-						<p>Address : 1234 lock, Charlotte, North Carolina, United States</p>
-						<p class="my-2">Phone : +12 534894364</p>
-						<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
-					</div>
-					<div class="footer-title mt-4 pt-md-2">
-						<h3>Payment Method</h3>
-					</div>
-					<ul class="list-unstyled payment-links mt-4">
-						<li>
-							<a href="login.html"><img src="images/pay2.png" alt=""></a>
-						</li>
-						<li>
-							<a href="login.html"><img src="images/pay5.png" alt=""></a>
-						</li>
-						<li>
-							<a href="login.html"><img src="images/pay1.png" alt=""></a>
-						</li>
-						<li>
-							<a href="login.html"><img src="images/pay4.png" alt=""></a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-lg-4 footer-grid_section_1its">
-					<div class="footer-title">
-						<h3>Request Info</h3>
-					</div>
-					<div class="info-form-right mt-4 p-0">
-						<form action="#" method="post">
-							<div class="row">
-								<div class="col-lg-6 form-group mb-2 pr-lg-1">
-									<input type="text" class="form-control" name="Name" placeholder="Name" required="">
-								</div>
-								<div class="col-lg-6 form-group mb-2 pl-lg-1">
-									<input type="text" class="form-control" name="Phone" placeholder="Phone"
-										required="">
-								</div>
-							</div>
-							<div class="form-group mb-2">
-								<input type="email" class="form-control" name="Email" placeholder="Email" required="">
-							</div>
-							<div class="form-group mb-2">
-								<textarea name="Comment" class="form-control" placeholder="Comment"
-									required=""></textarea>
-							</div>
-							<button type="submit" class="btn submit-contact ml-auto">Submit</button>
-						</form>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -622,7 +438,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //footer -->
 	<!-- copyright -->
 	<div class="cpy-right text-center py-3">
-		<p>© 2019 Tasty Burger. All rights reserved | Design by
+		<p>© 2020 Tasty Stuff &amp; Burger. All rights reserved | Design by
 			<a href="http://w3layouts.com"> W3layouts.</a>
 		</p>
 	</div>
