--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<span class="fa fa-map-marker mr-2"></span>Montréal, Canada
 										</p>
 										<p class="text-da small">
-											<span class="fa fa-id-card-o mr-2"></span>Travail pr&eacute;sent&eacute; par Marjolaine H&eacute;bert
+											<span class="fa fa-id-card-o mr-2"></span>IFT1142 - TP1 par Marjolaine H&eacute;bert
 										</p>
 									</div>
 									<div class="col-md-12 col-12">
@@ -129,32 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-xl-7 col-lg-6 callbacks_container">
 				<!-- banner slider -->
 				<div class="csslider infinity" id="slider1">
-					<input type="radio" name="slides" checked="checked" id="slides_1" />
-					<input type="radio" name="slides" id="slides_2" />
-					<input type="radio" name="slides" id="slides_3" />
-					<ul class="banner_slide_bg">
-						<li>
-							<div class="banner-top1"></div>
-						</li>
-						<li>
-							<div class="banner-top2"></div>
-						</li>
-						<li>
-							<div class="banner-top3"></div>
-						</li>
-					</ul>
-					<div class="arrows">
-						<label for="slides_1"></label>
-						<label for="slides_2"></label>
-						<label for="slides_3"></label>
-					</div>
-					<div class="navigation">
-						<div>
-							<label for="slides_1"></label>
-							<label for="slides_2"></label>
-							<label for="slides_3"></label>
-						</div>
-					</div>
+					<div class="banner-top1"></div>
 				</div>
 				<!-- //banner slider -->
 			</div>
@@ -163,39 +138,50 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //banner -->
 	<div class="clearfix"></div>
 
-	<!-- about -->
-	<div class="about-bottom">
-		<div class="row no-gutters">
-			<div class="col-lg-5 col-md-6 about">
+	
 
-			</div>
-			<div class="col-lg-7 col-md-6 about-right-w3 text-right py-md-5">
-				<div class="right-space py-xl-5 py-lg-3">
-					<div class="title-section mb-4">
-						<p class="w3ls-title-sub">About Us</p>
-						<h3 class="w3ls-title">Welcome to <span>Tasty Burger</span></h3>
+	<!-- two grids -->
+	<section class="offer">
+		<div class="row py-4 calltoaction text-center ">
+            <h1 class="text-center">Faites votre choix</h1>
+        </div>
+        <div class="row no-gutters">
+			<div class="col-md-6 p-0">
+				<div class="blog-sec-w3">
+					<div class="text-blog-w3 text-center p-2">
+						<h4 class="text-wh mb-3"><a href="menu.html">Nos entrées</a></h4>
+						<p class="text-li">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Sed
+							ut perspiciatis
+							unde omnis iste natus error.</p>
+						<a href="menu.html" class="button-w3ls active mt-5">Order Now
+							<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
+						</a>
 					</div>
-					<p class="about-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-						doloremque
-						laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-						architecto
-						beatae vitae dicta
-						sunt explicabo.Nemo enim ipsam voluptatem quia voluptas sit.</p>
-					<a href="about.html" class="button-w3ls mt-5">Read More
-						<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
-					</a>
+				</div>
+			</div>
+			<div class="col-md-6 p-0">
+				<div class="blog-sec-w3 blog-sec-w3-2">
+					<div class="text-blog-w3 text-center p-2">
+						<h4 class="text-wh mb-3"><a href="menu.html">Plat principal</a></h4>
+						<p class="text-li">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Sed
+							ut perspiciatis
+							unde omnis iste natus error.</p>
+						<a href="menu.html" class="button-w3ls active mt-5">Order Now
+							<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- //about -->
+	</section>
+	<!-- //two grids -->
 
 	<!-- specials -->
 	<section class="blog_w3ls py-5">
 		<div class="container pb-xl-5 pb-lg-3">
 			<div class="title-section text-center mb-md-5 mb-4">
-				<p class="w3ls-title-sub">Tasty</p>
-				<h3 class="w3ls-title">Our <span>Special</span></h3>
+				<h3 class="w3ls-title">Le festival du <span>Burger</span></h3>
+                <p class="w3ls-title-sub">est de retour</p>
 			</div>
 			<div class="row">
 				<!-- blog grid -->
@@ -207,9 +193,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</a>
 						</div>
 						<div class="card-body border border-top-0">
-							<h5 class="blog-title card-title m-0"><a href="menu.html">French Burger</a></h5>
+							<h5 class="blog-title card-title m-0"><a href="menu.html">Le classique</a></h5>
 							<p class="mt-3">Cras ultricies ligula sed magna dictum porta auris blandita.</p>
-							<a href="menu.html" class="btn button-w3ls mt-4 mb-3">View More
+							<a href="#" class="btn button-w3ls mt-4 mb-3">Commander maintenant
 								<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
 							</a>
 						</div>
@@ -225,9 +211,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</a>
 						</div>
 						<div class="card-body border border-top-0">
-							<h5 class="blog-title card-title m-0"><a href="menu.html">Veg Muffin</a></h5>
+							<h5 class="blog-title card-title m-0"><a href="menu.html">Le végé</a></h5>
 							<p class="mt-3">Cras ultricies ligula sed magna dictum porta auris blandita.</p>
-							<a href="menu.html" class="button-w3ls active mt-4 mb-3">View More
+							<a href="#" class="button-w3ls active mt-4 mb-3">Commander maintenant
 								<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
 							</a>
 						</div>
@@ -243,9 +229,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</a>
 						</div>
 						<div class="card-body border border-top-0">
-							<h5 class="blog-title card-title m-0"><a href="menu.html">Hashbrown Brioche</a></h5>
+							<h5 class="blog-title card-title m-0"><a href="menu.html">La création</a></h5>
 							<p class="mt-3">Cras ultricies ligula sed magna dictum porta auris blandita.</p>
-							<a href="menu.html" class="button-w3ls mt-4 mb-3">View More
+							<a href="#" class="button-w3ls mt-4 mb-3">Commander maintenant
 								<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
 							</a>
 						</div>
@@ -256,113 +242,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</section>
 	<!-- //specials -->
-
-	<!-- two grids -->
-	<section class="offer pt-lg-3">
-		<div class="row no-gutters">
-			<div class="col-md-6 p-0">
-				<div class="blog-sec-w3">
-					<div class="text-blog-w3 text-center p-2">
-						<h4 class="text-wh mb-3"><a href="menu.html">Best Fast Food Collection</a></h4>
-						<p class="text-li">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Sed
-							ut perspiciatis
-							unde omnis iste natus error.</p>
-						<a href="menu.html" class="button-w3ls active mt-5">Order Now
-							<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-6 p-0">
-				<div class="blog-sec-w3 blog-sec-w3-2">
-					<div class="text-blog-w3 text-center p-2">
-						<h4 class="text-wh mb-3"><a href="menu.html">Organic Best & Fresh Food</a></h4>
-						<p class="text-li">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Sed
-							ut perspiciatis
-							unde omnis iste natus error.</p>
-						<a href="menu.html" class="button-w3ls active mt-5">Order Now
-							<span class="fa fa-caret-right ml-1" aria-hidden="true"></span>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- //two grids -->
-
-	<!-- services -->
-	<section class="middle py-5" id="services">
-		<div class="container py-xl-5 py-lg-3">
-			<div class="title-section text-center mb-md-5 mb-4">
-				<p class="w3ls-title-sub">Our Work</p>
-				<h3 class="w3ls-title mb-3">Excellent <span>Services</span></h3>
-			</div>
-			<div class="row grids-w3 py-xl-5 py-lg-4 pt-lg-0 pt-4">
-				<div class="col-lg-5 w3pvt-lauits_banner_bottom_left">
-					<div class="row">
-						<div class="col-8 wthree_banner_bottom_grid_right text-right">
-							<h4 class="mb-3"><a href="login.html">Free Shipping</a></h4>
-							<p>Morbi viverra lacus commodo felis semper lectus feugiat.</p>
-						</div>
-						<div class="col-4 wthree_banner_bottom_grid_left text-lg-right text-center">
-							<img src="images/s1.png" alt="" class="img-fluid">
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-2 w3pvt-lauits_banner_bottom_left">
-
-				</div>
-				<div class="col-lg-5 w3pvt-lauits_banner_bottom_left mt-lg-0 mt-4">
-					<div class="row">
-						<div class="col-4 wthree_banner_bottom_grid_left text-lg-right text-center">
-							<img src="images/s2.png" alt="" class="img-fluid">
-						</div>
-						<div class="col-8 wthree_banner_bottom_grid_right">
-							<h4 class="mb-3"><a href="login.html">Free & Easy Returns</a></h4>
-							<p>Morbi viverra lacus commodo felis semper lectus feugiat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row grids-w3 py-xl-5 py-lg-4 mt-lg-0 mt-4">
-				<div class="col-lg-4 w3pvt-lauits_banner_bottom_left">
-					<div class="row">
-						<div class="col-8 wthree_banner_bottom_grid_right text-right pl-lg-0">
-							<h4 class="mb-3"><a href="login.html">Online Order</a></h4>
-							<p>Morbi viverra lacus commodo felis semper lectus feugiat.</p>
-						</div>
-						<div class="col-4 wthree_banner_bottom_grid_left text-lg-right text-center pr-lg-0">
-							<img src="images/s3.png" alt="" class="img-fluid">
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 w3pvt-lauits_banner_bottom_left pr-0">
-
-				</div>
-				<div class="col-lg-4 w3pvt-lauits_banner_bottom_left mt-lg-0 mt-4">
-					<div class="row">
-						<div class="col-4 wthree_banner_bottom_grid_left text-lg-right text-center pl-lg-0">
-							<img src="images/s4.png" alt="" class="img-fluid">
-						</div>
-						<div class="col-8 wthree_banner_bottom_grid_right pr-lg-0">
-							<h4 class="mb-3"><a href="login.html">24/7 Support</a></h4>
-							<p>Morbi viverra lacus commodo felis semper lectus feugiat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="img-blog-2">
-			<img src="images/img.png" alt="" class="img-fluid">
-		</div>
-	</section>
-	<!-- //services -->
-
-	
-
-	<!-- slides images -->
-	<section class="wthree-slider" id="masthead"></section>
-	<!-- //slides images -->
 
 	<!-- footer -->
 	<footer class="py-5">
