fixed the choix section title

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- two grids -->
 	<section class="offer">
 		<div class="row py-4 calltoaction text-center ">
-            <h1 class="text-center">Faites votre choix</h1>
+            <div class="col-12 ">
+				<h1 class="text-center">Faites votre choix</h1>
+			</div>
         </div>
         <div class="row no-gutters">
 			<div class="col-md-6 p-0">
