--- a/credits.html
+++ b/credits.html
@@ -80,6 +80,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<!-- banner -->
+
 	<!--gallery-->
 	<div class="gallery">
 		<div class="container">
@@ -122,68 +123,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>	
 	</div>	
 	<!--//gallery-->
+
 	<!-- footer -->
 	<div class="w3-agile-footer">
 		<div class="container">
-			<div class="footer-grids">
-				<div class="col-md-3 footer-grid">
-					<div class="footer-grid-heading">
-						<h4>Address</h4>
-					</div>
-					<div class="footer-grid-info">
-						<p>Eiusmod Tempor inc
-							<span>St Dolore Place,Kingsport 56777.</span>
-						</p>
-						<p class="phone">Phone : +1 123 456 789
-							<span>Email : <a href="mailto:example@email.com">mail@example.com</a></span>
-						</p>
-					</div>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<div class="footer-grid-heading">
-						<h4>Navigation</h4>
-					</div>
-					<div class="footer-grid-info">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="menu.html">Menu</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<div class="footer-grid-heading">
-						<h4>Follow</h4>
-					</div>
-					<div class="social">
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-rss"></i></a></li>
-							<li><a href="#"><i class="fa fa-vk"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<div class="footer-grid-heading">
-						<h4>Newsletter</h4>
-					</div>
-					<div class="footer-grid-info">
-						<form action="#" method="post">
-							<input type="email" id="mc4wp_email" name="EMAIL" placeholder="Enter your email here" required="">
-							<input type="submit" value="Subscribe">
-						</form>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
 			<div class="agileits-w3layouts-copyright">
-				<p>© 2017 Royal Recipes . All Rights Reserved | Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
+				<p>Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
 			</div>
 		</div>
 	</div>
 	<!-- //footer -->
+	<script src="js/owl.carousel.js"></script>  
 	<script type="text/javascript" src="js/move-top.js"></script>
 	<script type="text/javascript" src="js/easing.js"></script>
 	<!-- here stars scrolling icon -->
@@ -203,5 +153,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 	</script>
 <!-- //here ends scrolling icon -->
+<script type="text/javascript">
+			/* init Jarallax */
+			$('.jarallax').jarallax({
+				speed: 0.5,
+				imgWidth: 1366,
+				imgHeight: 768
+			})
+		</script>
 </body>	
 </html>
