styles fix on credits

--- a/credits.html
+++ b/credits.html
@@ -46,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		
 	</div>
 	<!-- banner -->
-	<div class="banner about-banner">
+	<div class="banner">
 		<div class="top-banner">
 			<div class="container">
 				<div class="top-banner-left">
@@ -66,7 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="header">
 			<div class="container">
-				<div class="logo align-center">
+				<div class="logo grand-titre">
 					<h1>
 						<a href="index.html">La Trattoria méditéranéenne</a>
 					</h1>
@@ -75,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		<div class="w3-about-heading py-xl">
+		<div class="w3-about-heading pt-lg">
 			<h2>Crédits Photo</h2>
 		</div>
 	</div>
