--- a/index.html
+++ b/index.html
@@ -145,83 +145,26 @@ $(document).ready(function() {
 	<!-- banner -->
 	<!-- services -->
 	<div class="services" id="services">
-		<div class="container">
-			<div class="services-heading">
-				<h2>Our Services</h2>
+		<div class="container py-xl">
+			<div class="services-heading pb-md">
+				<h2>Le menu</h2>
 			</div>
-			<div class="w3-agileits-services-grids">
-				<div class="col-md-4 w3-agileits-services-left">
-					<div class="services-info">
-						
-					</div>
-				</div>
-				<div class="col-md-8 w3-agileits-services-right">
-					<div class="services-right-grids">
-						<div class="col-sm-6 services-right-grid">
-							<div class="services-icon hvr-radial-in">
-								<i class="fa fa-anchor" aria-hidden="true"></i>
-							</div>
-							<div class="services-icon-info">
-								<h5>Phasellus suscipit</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci enim, posuere sed tincidunt et, pellentesque eget mi.</p>
-							</div>
-						</div>
-						<div class="col-sm-6 services-right-grid">
-							<div class="services-icon hvr-radial-in">
-								<i class="fa fa-comment" aria-hidden="true"></i>
-							</div>
-							<div class="services-icon-info">
-								<h5>Phasellus suscipit</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci enim, posuere sed tincidunt et, pellentesque eget mi.</p>
-							</div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-					<div class="services-right-grids">
-						<div class="col-sm-6 services-right-grid">
-							<div class="services-icon hvr-radial-in">
-								<i class="fa fa-heartbeat" aria-hidden="true"></i>
-							</div>
-							<div class="services-icon-info">
-								<h5>Phasellus suscipit</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci enim, posuere sed tincidunt et, pellentesque eget mi.</p>
-							</div>
-						</div>
-						<div class="col-sm-6 services-right-grid">
-							<div class="services-icon hvr-radial-in">
-								<i class="fa fa-magnet" aria-hidden="true"></i>
-							</div>
-							<div class="services-icon-info">
-								<h5>Phasellus suscipit</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci enim, posuere sed tincidunt et, pellentesque eget mi.</p>
-							</div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-					<div class="services-right-grids">
-						<div class="col-sm-6 services-right-grid">
-							<div class="services-icon hvr-radial-in">
-							<i class="fa fa-thumbs-up" aria-hidden="true"></i>
-							</div>
-							<div class="services-icon-info">
-								<h5>Phasellus suscipit</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci enim, posuere sed tincidunt et, pellentesque eget mi.</p>
-							</div>
-						</div>
-						<div class="col-sm-6 services-right-grid">
-							<div class="services-icon hvr-radial-in">
-								<i class="fa fa-heartbeat" aria-hidden="true"></i>
-							</div>
-							<div class="services-icon-info">
-								<h5>Phasellus suscipit</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci enim, posuere sed tincidunt et, pellentesque eget mi.</p>
-							</div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
+			
+			<!-- conteneur les entrées -->
+			<div id="plat-entree" class="col-sm-6 pb-md">
+				contenu entrées
 			</div>
+
+			<!-- conteneur plats principaux -->
+			<div id="plat-rincipal" class="col-sm-6 pb-md">
+				contenu plats
+			</div>
+
+			<!-- conteneur prix -->
+			<div id="afficher-prix" class="col-12">
+
+			</div>
+			
 		</div>
 	</div>
 	<!-- //services -->
@@ -229,7 +172,7 @@ $(document).ready(function() {
 	<div class="jarallax offer">
 		<div class="container">
 			<div class="w3l-offer-heading">
-				<h3>Today Offers</h3>
+				<h3>Obtenez</h3>
 			</div>
 			<div class="w3ls-offer-slider">
 				<div class="slider">
@@ -289,7 +232,7 @@ $(document).ready(function() {
 	<div class="special">
 		<div class="container">
 			<div class="wthree-special-heading">
-				<h3>Today Special</h3>
+				<h3>Nos plats cuisinés à emporter </h3>
 			</div>
 			<div class="special-grids">
 				<div id="owl-demo" class="owl-carousel owl-theme">
